Switch from manual background service to SyncAdapter implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,8 @@
     <string name="direction_west">W</string>
     <string name="direction_northwest">NW</string>
 
+    <!-- SyncAdapter related -->
+    <string name="sync_account_type">sunshine.jongor_software.com</string>
+    <string name="content_authority">com.jongor_software.android.sunshine</string>
+
 </resources>
