--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,10 @@
     <string name="sync_account_type">sunshine.jongor_software.com</string>
     <string name="content_authority">com.jongor_software.android.sunshine</string>
 
+    <!-- Notification Format -->
+    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
+
+    <!-- Strings related to notification preference -->
+    <string name="pref_last_notification">last_notification</string>
+
 </resources>
